--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1>Privacy Policy for Moeny Master</h1>
+    <h1>Privacy Policy for Money Master</h1>
 
     <p>This Privacy Policy explains how we collects, uses, and discloses information about you. By using our services, you consent to the practices described in this Privacy Policy.</p>
 
